2015-10-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (gstrptime): Fixes a bug in processing time input using
	format "%s".  Because time input can cross whitespace between fields,
	the string being parsed for one field may continue on into the next
	field.  The "%s" code looked for the first decimal point in the string,
	but would read beyond the current field to find it, causing an erroneous
	fractional second to be added to the input time value.

2015-10-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/interpol.c (cp_implode): Fix bug in "smooth cnorm" that has been
	there since the option was first introduced.

2015-06-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util.c (gprintf): 'L' had broken if-else since 2010; 'B' was
	missing handling for power zero; 'B' had problem with excess
	precision.

2015-05-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/wxterminal/wxt_gui.cpp: Insert missing include of
	<sys/select.h>.
	(wxt_waitforinput): Add note about missing check for HAVE_SELECT.

2015-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot):  Turning on "hidden3d" caused an off by
	one error in assigning color to contours levels. (introduced in 4.6.5)
	Bug #1603

	* configure.in src/version.c:  Bump patchlevel to 4.6.7

2015-04-27  Christoph Bersch <usenet@bersch.net>

	* src/stats.c:  The stats code was confusing the x and y dimensions of
	matrix data.  E.g. it would report a 5X7 matrix as being 7X5, and
	mis-calculate the indices of the min/max values.
	Bug #1501

2015-04-07  Ethan A Merritt  <merritt@u.washington.edu>

	* term.c (test_term): print gnuplot version in "test" command.

2015-02-23  Ethan A Merritt  <merritt@u.washington.edu>

	* axis.c:  Special case code for axis tickmarks in polar plots was 
	incorrectly being applied to all axes, not just the polar axis.
	Bug #1569

2015-02-18  Ethan A Merritt  <merritt@u.washington.edu>
